# APC523-FinalProject

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: analysis.ipynb  extensions.ipynb
src/cultural_evolution/: __init__.py  analytical.py  experiments.py  methods.py  solvers.py  system.py  utils.py
tests/: test_equilibrium.py  test_learning.py  test_transitions.py
