[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cultural-evolution"
version = "0.1.0"
description = "Numerical and analytical models of cultural dynamics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy"
]